--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,8 +3,8 @@
     "strict": true,
     "composite": true,
     "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
